@@ -4,45 +4,45 @@ ms.topic: troubleshooting
 ms.prod: xamarin
 ms.assetid: 62FAF21C-8090-4AF3-9D88-05A4CFCAFFDC
 ms.technology: xamarin-android
-author: conceptdev
-ms.author: crdun
+author: davidortinau
+ms.author: daortin
 ms.date: 06/02/2018
-ms.openlocfilehash: 4a3f3849725f0d3b8e8bc8d43c1cd3f87f044616
-ms.sourcegitcommit: 57f815bf0024b1afe9754c0e28054fc0a53ce302
+ms.openlocfilehash: 9c9b9f5a205a2eef7db9f27e8d09b10ce65a4318
+ms.sourcegitcommit: 2fbe4932a319af4ebc829f65eb1fb1816ba305d3
 ms.translationtype: MT
 ms.contentlocale: pt-BR
-ms.lasthandoff: 09/06/2019
-ms.locfileid: "70761043"
+ms.lasthandoff: 10/29/2019
+ms.locfileid: "73027051"
 ---
 # <a name="adjusting-java-memory-parameters-for-the-android-designer"></a>Ajustar os parâmetros de memória do Java para o Android Designer
 
-Os parâmetros de memória padrão que são usados ao iniciar `java` o processo para o Android designer podem ser incompatíveis com algumas configurações do sistema.
+Os parâmetros de memória padrão que são usados ao iniciar o processo de `java` para o Android designer podem ser incompatíveis com algumas configurações do sistema.
 
 A partir do Xamarin Studio 5.7.2.7 (e posterior, Visual Studio para Mac) e do Ferramentas do Visual Studio para o Xamarin 3.9.344, essas configurações podem ser personalizadas em uma base por projeto.
 
 ## <a name="new-android-designer-properties-and-corresponding-java-options"></a>Novas propriedades do designer do Android e opções Java correspondentes
 
-Os seguintes nomes de propriedade correspondem à opção de [linha de comando](http://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) Java indicada
+Os seguintes nomes de propriedade correspondem à opção de [linha de comando](https://docs.oracle.com/javase/7/docs/technotes/tools/windows/java.html) Java indicada
 
-- **AndroidDesignerJavaRendererMinMemory** -Xms
+- **AndroidDesignerJavaRendererMinMemory** -XMS
 
 - **AndroidDesignerJavaRendererMaxMemory** -Xmx
 
-- **AndroidDesignerJavaRendererPermSize** -XX:MaxPermSize
+- **AndroidDesignerJavaRendererPermSize** -XX: MaxPermSize
 
 # <a name="visual-studiotabwindows"></a>[Visual Studio](#tab/windows)
 
 1. Abra a solução no Visual Studio.
 
-2. Selecione cada projeto do Android um por um no Gerenciador de Soluções e clique em [Mostrar todos os arquivos](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) duas vezes em cada projeto. Você pode ignorar projetos que não contêm nenhum `.axml` arquivo de layout. Esta etapa garantirá que cada diretório do projeto contenha um `.csproj.user` arquivo.
+2. Selecione cada projeto do Android um por um no Gerenciador de Soluções e clique em [Mostrar todos os arquivos](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2008/4afxey9h(v=vs.90)) duas vezes em cada projeto. Você pode ignorar projetos que não contêm nenhum arquivo de layout de `.axml`. Esta etapa garantirá que cada diretório do projeto contenha um arquivo de `.csproj.user`.
 
 3. Encerre o Visual Studio.
 
-4. Localize o `.csproj.user` arquivo para cada um dos projetos da etapa 2.
+4. Localize o arquivo de `.csproj.user` para cada um dos projetos da etapa 2.
 
-5. Edite `.csproj.user` cada arquivo em um editor de texto.
+5. Edite cada arquivo de `.csproj.user` em um editor de texto.
 
-6. Adicione qualquer uma ou todas as novas propriedades de memória do designer do `<PropertyGroup>` Android dentro de um elemento. Você pode usar um existente `<PropertyGroup>` ou criar um novo. Aqui está um arquivo de `.csproj.user` exemplo completo que inclui todos os 3 atributos definidos para seus valores padrão:
+6. Adicione uma ou todas as novas propriedades de memória do designer do Android dentro de um elemento `<PropertyGroup>`. Você pode usar um `<PropertyGroup>` existente ou criar um novo. Aqui está um exemplo completo `.csproj.user` arquivo que inclui todos os 3 atributos definidos para seus valores padrão:
 
     ```xml
     <?xml version="1.0" encoding="utf-8"?>
@@ -58,19 +58,19 @@ Os seguintes nomes de propriedade correspondem à opção de [linha de comando](
     </Project>
     ```
 
-7. Salve e feche todos os arquivos atualizados `.csproj.user` .
+7. Salve e feche todos os arquivos de `.csproj.user` atualizados.
 
 8. Reinicie o Visual Studio e reabra sua solução.
 
 # <a name="visual-studio-for-mactabmacos"></a>[Visual Studio para Mac](#tab/macos)
 
-1. Abra sua solução no Visual Studio para Mac para garantir que o diretório da solução `.userprefs` contenha um arquivo.
+1. Abra sua solução no Visual Studio para Mac para garantir que o diretório de solução contenha um arquivo de `.userprefs`.
 
 2. Encerre Visual Studio para Mac.
 
-3. Localize o `.userprefs` arquivo no diretório da solução.
+3. Localize o arquivo de `.userprefs` no diretório da solução.
 
-4. Edite `.userprefs` o arquivo em um editor de texto.
+4. Edite o arquivo de `.userprefs` em um editor de texto.
 
 5. Localize o elemento XML existente com o formato a seguir. A última parte deste nome de elemento corresponderá ao nome do seu projeto: "AndroidApplication1" neste exemplo:
 
@@ -78,9 +78,9 @@ Os seguintes nomes de propriedade correspondem à opção de [linha de comando](
     <MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >
     ```
 
-6. Se o `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` elemento não existir, crie-o em qualquer lugar dentro do `<Properties>` elemento delimitador. Certifique-se de substituir "AndroidApplication1" pelo nome do seu projeto.
+6. Se o elemento `<MonoDevelop.Ide.ItemProperties.AndroidApplication1 ... >` não existir, crie-o em qualquer lugar dentro do elemento `<Properties>` delimitador. Certifique-se de substituir "AndroidApplication1" pelo nome do seu projeto.
 
-7. Adicione uma ou todas as novas propriedades de memória do designer do Android como atributos no elemento. Aqui está um arquivo de `.userprefs` exemplo completo que inclui todos os 3 atributos definidos para seus valores padrão:
+7. Adicione uma ou todas as novas propriedades de memória do designer do Android como atributos no elemento. Aqui está um exemplo completo `.userprefs` arquivo que inclui todos os 3 atributos definidos para seus valores padrão:
 
     ```xml
     <Properties StartupItem="AndroidApplication1\AndroidApplication1.csproj">
@@ -94,9 +94,9 @@ Os seguintes nomes de propriedade correspondem à opção de [linha de comando](
     </Properties>
     ```
 
-8. Repita as etapas de 5-7 para cada projeto do Android na solução que `.axml` contém qualquer arquivo de layout. (Ou seja, adicione um `<MonoDevelop.Ide.ItemProperties.ProjectName>` elemento para cada projeto.)
+8. Repita as etapas de 5-7 para cada projeto do Android na solução que contém os arquivos de layout de `.axml`. (Ou seja, adicione um elemento `<MonoDevelop.Ide.ItemProperties.ProjectName>` para cada projeto.)
 
-9. Salve e feche o `.userprefs` arquivo.
+9. Salve e feche o arquivo `.userprefs`.
 
 10. Reinicie Visual Studio para Mac e reabra sua solução.
 
